--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "gulp-uglify": "^2.0.0",
         "gulp-util": "^3.0.7",
         "phaser-ce": "^2.7.0",
-        "pug": "^2.0.0-beta6",
+        "pug": "^2.0.0-rc.4",
         "tslint": "^3.15.1",
         "typescript": "^2.0.10",
         "typescript-tools": "github:clausreinke/typescript-tools"
