--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "author": " <deniz.traka@gmail.com>",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.14.0"
+        "express": "^4.14.0",
+        "pug": "^2.0.0-rc.4"
+
     },
     "devDependencies": {
         "eslint": "^3.3.1",
@@ -26,8 +28,7 @@
         "gulp-typescript": "^2.13.6",
         "gulp-uglify": "^2.0.0",
         "gulp-util": "^3.0.7",
-        "phaser-ce": "^2.7.0",
-        "pug": "^2.0.0-rc.4",
+        "phaser-ce": "^2.7.0",        
         "tslint": "^3.15.1",
         "typescript": "^2.0.10",
         "typescript-tools": "github:clausreinke/typescript-tools"
