--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,9 @@
         "rootDir": "src",
         "preserveConstEnums": true,
         "sourceMap": true
-    }
+    },
+    "files": [
+        "node_modules\\phaser-ce\\typescript\\phaser.d.ts",
+        "node_modules\\phaser-ce\\typescript\\pixi.d.ts"
+    ]
 }
