--- a/package.json
+++ b/package.json
@@ -8,17 +8,12 @@
         "devel": "gulp watch & node index.js",
         "production": "NODE_ENV=production node index.js",
         "server": "node index.js",
-        "start": "node index.js",
-        "heroku-postbuild": "npm run production"
+        "start": "node index.js"
     },
     "author": " <deniz.traka@gmail.com>",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.14.0",
-        "typescript": "^2.0.10",
-        "phaser-ce": "^2.7.0",
-        "pug": "^2.0.0-rc.4"
-
+        "express": "^4.14.0"
     },
     "devDependencies": {
         "eslint": "^3.3.1",
@@ -31,22 +26,27 @@
         "gulp-typescript": "^2.13.6",
         "gulp-uglify": "^2.0.0",
         "gulp-util": "^3.0.7",
+        "phaser-ce": "^2.7.0",
+        "pug": "^2.0.0-beta6",
         "tslint": "^3.15.1",
+        "typescript": "^2.0.10",
         "typescript-tools": "github:clausreinke/typescript-tools"
     },
     "engines": {
         "node": "7.1.0"
     },
     "eslintConfig": {
-        "overrides": [{
-            "files": [
-                "build/*.js",
-                "lib/*.js"
-            ],
-            "excludedFiles": [
-                "node_modules/*.js"
-            ]
-        }],
+        "overrides": [
+            {
+                "files": [
+                    "build/*.js",
+                    "lib/*.js"
+                ],
+                "excludedFiles": [
+                    "node_modules/*.js"
+                ]
+            }
+        ],
         "env": {
             "es6": true
         }
