--- a/package.json
+++ b/package.json
@@ -13,38 +13,42 @@
     "author": " <deniz.traka@gmail.com>",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.14.0"
+        "express": "^4.16.3",
+        "require-dir": "^1.0.0"
     },
     "devDependencies": {
-        "eslint": "^3.3.1",
+        "eslint": "^4.19.1",
         "gulp": "^3.9.1",
         "gulp-concat": "^2.6.0",
-        "gulp-git": "^1.11.1",
+        "gulp-git": "^2.7.0",
         "gulp-livereload": "^3.8.1",
-        "gulp-rename": "^1.2.2",
-        "gulp-tslint": "^6.1.1",
-        "gulp-typescript": "^2.13.6",
-        "gulp-uglify": "^2.0.0",
+        "gulp-rename": "^1.3.0",
+        "gulp-sourcemaps": "^2.6.4",
+        "gulp-tslint": "^8.1.3",
+        "gulp-typescript": "^5.0.0-alpha.1",
+        "gulp-uglify": "^3.0.0",
         "gulp-util": "^3.0.7",
-        "phaser-ce": "^2.7.0",
-        "pug": "^2.0.0-beta6",
-        "tslint": "^3.15.1",
-        "typescript": "^2.0.10",
+        "phaser-ce": "^2.10.6",
+        "pug": "^2.0.3",
+        "tslint": "^5.10.0",
+        "typescript": "^2.9.1",
         "typescript-tools": "github:clausreinke/typescript-tools"
     },
     "engines": {
         "node": "7.1.0"
     },
     "eslintConfig": {
-        "overrides": [{
-            "files": [
-                "build/*.js",
-                "lib/*.js"
-            ],
-            "excludedFiles": [
-                "node_modules/*.js"
-            ]
-        }],
+        "overrides": [
+            {
+                "files": [
+                    "build/*.js",
+                    "lib/*.js"
+                ],
+                "excludedFiles": [
+                    "node_modules/*.js"
+                ]
+            }
+        ],
         "env": {
             "es6": true
         }
